--- a/nas_solution/0_snnconv_norm_baseline.ipynb
+++ b/nas_solution/0_snnconv_norm_baseline.ipynb
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1203,29 +1203,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([592023, 3])\n",
-      "torch.Size([1, 256, 3751])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.0794, 0.0594, 0.0238,  ..., 0.1273, 0.1124, 0.0562])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "torch.save(snet.state_dict(), 'chkpt_fullconv_normed.pt')"
+   ]
   }
  ],
  "metadata": {
