--- a/nas_solution/0_snnconv_norm_baseline.ipynb
+++ b/nas_solution/0_snnconv_norm_baseline.ipynb
@@ -1098,7 +1098,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[7.0525e+00, 1.1126e+01, 1.6589e+01,  ..., 1.0754e+00,\n",
+       "          4.2705e-01, 2.1037e+00],\n",
+       "         [1.2162e+00, 1.5867e+00, 2.2886e+00,  ..., 1.3150e+00,\n",
+       "          1.2388e+00, 1.0437e+00],\n",
+       "         [6.1808e-01, 7.0177e-01, 7.1130e-01,  ..., 1.0139e+00,\n",
+       "          9.2769e-01, 1.0271e+00],\n",
+       "         ...,\n",
+       "         [1.0947e-02, 0.0000e+00, 7.0997e-03,  ..., 2.6565e-02,\n",
+       "          1.1909e-02, 9.6071e-03],\n",
+       "         [0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 1.1968e-02,\n",
+       "          3.3379e-03, 4.1805e-03],\n",
+       "         [1.4455e-02, 0.0000e+00, 5.1746e-03,  ..., 2.7474e-02,\n",
+       "          8.5914e-03, 1.2606e-02]]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x/snet.lmbda[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
